--- a/static/assignment564/lab04.Rmd
+++ b/static/assignment564/lab04.Rmd
@@ -102,7 +102,8 @@ B<- data.frame(
   sqrt(var(B$b3))
   cov(B$b1,B$b3)
   cor(B$b1,B$b3)
-function(){B<-cor(X)MSE}
+# function(){B<-cor(X)MSE}
+  
 ```
 
 
