--- a/docs/assignment564/lab03.Rmd
+++ b/docs/assignment564/lab03.Rmd
@@ -75,11 +75,11 @@ Firstly, the estimated intercept (69.104) is not zero on 95% confident level by 
 
 Secondly, the MSE value of model with intercept (75.36) is about half of the MSE with zero intercept (159), which shows the former is better fitted.
 
-Thirdly, the R-suqare value of model with intercept is 0.5983, while the R-suqare value of zero-intercept model is 0.9929. We can explain that the much larger SSR in zero-intercept model contributs most of the additional R-suqare value. The sum square of total variation with intercept ($2693.6+1808.6=4502.2$) is only 1 percent of the SST with zero intercept ($551834+3968=555802$). It doesn't mean the later is better.
+Thirdly, the R-suqare value of model with intercept is 0.5983, while the R-suqare value of zero-intercept model is 0.9929. We can explain that the much larger SSR in zero-intercept model contributs most of the additional R-suqare value. The sum square of total variation with intercept ($2693.6+1808.6=4502.2$) is only 1 percent of the SST with zero intercept ($551834+3968=555802$). 
 
 Fourthly, the overlayed fitted models on the scatterplot show significant difference between two models. The line through origin doesn't fit the pattern better.
 
-Overall, the model with intercept is recommended because adding non-zero intercept improves the model with smaller MSE. To increase R-square or fit the pattern better, we should look for other advanced models. 
+Overall, the model with intercept is recommended because the factors of P-value, CI, MSE, and pattern support it while R-square is low. To increase R-square or fit the pattern better, we should consider other omitted variables or advanced models. 
 
 
 ### Problem 2: 
