--- a/docs/assignment564/lab04.Rmd
+++ b/docs/assignment564/lab04.Rmd
@@ -15,78 +15,53 @@ options(repos="https://cran.rstudio.com")
 ```
 
 ### Problem 1
-Exercise 3.25 (Just report the T matrix, β vector and c vector along with their dimensions, and the rank of T matrix for each part).
-
-$$y=β_0+β_1 x_1+β_2 x_2+β_3 x_3+β_4 x_4+ε$$
+Exercise 3.25 (Just report the T matrix, β vector and c vector along with their dimensions, and the rank of T matrix for each part).$y=β_0+β_1 x_1+β_2 x_2+β_3 x_3+β_4 x_4+ε$
  (a) $H_0:\ β_1=β_2=β_3=β_4=β$
 
 $$y=β_0+β(x_1+x_2+x_3+x_4)+ε$$
 
+$$
+\mathbf{T}=\begin{bmatrix} 0 & 1 & -1 & 0 & 0 \\ 0 & 0 & 1 & -1 & 0 \\ 0 & 0 & 0 & 1 & -1  \end{bmatrix}_{3\times5} 
+\mathbf{β}=\begin{bmatrix} \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3 \\ \beta_4 \end{bmatrix}_{5\times1}
+\mathbf{C}=\begin{bmatrix} 0 \\ \beta \\ \beta  \\ \beta  \\ \beta \end{bmatrix}_{5\times1} rank(T)=2
+$$
+
  (b) $H_0:\ β_1=β_2,\ β_3=β_4$
  
 $$y=β_0+β_1(x_1+x_2)+β_3(x_3+x_4)+ε$$
+ 
+ $$
+\mathbf{T}=\begin{bmatrix} 0 & 1 & -1 & 0 & 0 \\ 0 & 0 & 1 & -1 & 0 \end{bmatrix}_{2\times5} 
+\mathbf{β}=\begin{bmatrix} \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3 \\ \beta_4 \end{bmatrix}_{5\times1}
+\mathbf{C}=\begin{bmatrix} 0 \\ 0 \end{bmatrix}_{2\times1} rank(T)=3
+$$
  
  (c) $H_0:\ β_1-2β_2=4β_3,\ β_1+2β_2=0$
 
 $$β_1=-2β_2=2β_3$$
 
 $$y=β_0+β_1(x_1-\frac12x_2+\frac12x_3)+β_4 x_4+ε$$
- 
-<!-- 
 
-$$
-\mathbf{Y}=\begin{bmatrix} y_1 \\ y_2 \\ \vdots  \\ y_n \end{bmatrix}_{n\times1} 
-\mathbf{X}=\begin{bmatrix} 1 & x_{1} \\ 1 & x_{2} \\ \vdots & \vdots  \\ 1 & x_{n} \end{bmatrix}_{n\times2} 
-\mathbf{β}=\begin{bmatrix} \beta_0 \\ \beta_1 \end{bmatrix}_{2\times1}+
-\mathbf{ε}=\begin{bmatrix} \varepsilon_1 \\ \varepsilon_2 \\ \vdots  \\ \varepsilon_n \end{bmatrix}_{n\times1}
+ $$
+\mathbf{T}=\begin{bmatrix} 0 & 1 & -2 & 0 & -4 \\ 0 & 1 & 2 & 0 & 0 \end{bmatrix}_{2\times5} 
+\mathbf{β}=\begin{bmatrix} \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3 \\ \beta_4 \end{bmatrix}_{5\times1}
+\mathbf{C}=\begin{bmatrix} 0 \\ 0 \end{bmatrix}_{2\times1} rank(T)=3
 $$
 
-
-$$
-\mathbf{X'X}=\begin{bmatrix} 1 &  1 &\cdots &1 \\   x_{1} & x_{2} & \cdots & x_{n} \end{bmatrix}_{2\times{n}} 
-\begin{bmatrix} 1 & x_{1} \\ 1 & x_{2} \\ \vdots & \vdots  \\ 1 & x_{n} \end{bmatrix}_{n\times2}=
-\begin{bmatrix} n & x_{1}+x_{2}+\cdots+x_{n} \\ x_{1}+x_{2}+\cdots+x_{n} & x_1^2+x_2^2+\cdots+x_n^2  \end{bmatrix}_{2\times2}=\begin{bmatrix} n & \sum_{i=1}^nx_i \\ \sum_{i=1}^nx_i & \sum_{i=1}^nx_i^2 \end{bmatrix}_{2\times2}
-$$
-
-
-
-$$
-\mathbf{|X'X|}^{-1}=\frac1{n\sum_{i=1}^nx_i^2-(\sum_{i=1}^nx_i)^2}\begin{bmatrix} \sum_{i=1}^nx_i^2  & -\sum_{i=1}^nx_i \\ -\sum_{i=1}^nx_i & n \end{bmatrix}_{2\times2}
-$$
-
-$$=\frac{\begin{bmatrix} \sum_{i=1}^nx_i^2 & -(\sum_{i=1}^nx_i) \\ -(\sum_{i=1}^nx_i) & n \end{bmatrix}_{2\times2}}{n\sum_{i=1}^nx_i^2-(n\bar x_i)^2}=\frac{\begin{bmatrix} \sum_{i=1}^nx_i^2 & -(\sum_{i=1}^nx_i) \\ -(\sum_{i=1}^nx_i) & n \end{bmatrix}_{2\times2}}{n(\sum_{i=1}^nx_i^2-n\bar x_i^2)}=\frac1{nS_{xx}}{\begin{bmatrix} \sum_{i=1}^nx_i^2 & -(\sum_{i=1}^nx_i) \\ -(\sum_{i=1}^nx_i) & n \end{bmatrix}_{2\times2}}
-$$
-
-
-$$
-\mathbf{X'Y}=\begin{bmatrix} 1 &  1 &\cdots &1 \\   x_{1} & x_{2} & \cdots & x_{n} \end{bmatrix}_{2\times{n}} 
-\begin{bmatrix} y_1 \\ y_2 \\ \vdots  \\ y_n \end{bmatrix}_{n\times1}=\begin{bmatrix} y_1 + y_2 +\cdots + y_n \\ x_{1}y_1 + x_{2}y_2 + \cdots + x_{n}y_n \end{bmatrix}_{2\times{1}}=\begin{bmatrix} \sum_{i=1}^ny_i \\ \sum_{i=1}^nx_{i}y_i \end{bmatrix}_{2\times{1}}
-$$
-
-
-$$
-\mathbf{\hatβ}=\mathbf{(X'X)^{-1} X'Y}=\frac1{nS_{xx}}\begin{bmatrix} \sum_{i=1}^nx_i^2 & -\sum_{i=1}^nx_i \\ -\sum_{i=1}^nx_i & n \end{bmatrix}_{2\times2}\begin{bmatrix} \sum_{i=1}^ny_i \\ \sum_{i=1}^nx_{i}y_i \end{bmatrix}_{2\times{1}}=\frac1{nS_{xx}}\begin{bmatrix} \sum_{i=1}^nx_i^2\sum_{i=1}^ny_i-\sum_{i=1}^nx_i\sum_{i=1}^nx_{i}y_i \\ -\sum_{i=1}^nx_i\sum_{i=1}^ny_i + n\sum_{i=1}^nx_{i}y_i \end{bmatrix}_{2\times1}$$
-
-$$=\begin{bmatrix} \frac{\sum_{i=1}^nx_i^2\sum_{i=1}^ny_i-\sum_{i=1}^nx_i\sum_{i=1}^nx_{i}y_i}{nS_{xx}} \\ \frac{-\sum_{i=1}^nx_i\sum_{i=1}^ny_i + n\sum_{i=1}^nx_{i}y_i}{nS_{xx}} \end{bmatrix}_{2\times1}=\begin{bmatrix} \frac{\sum_{i=1}^nx_i^2n\bar{y}-n\bar{x}\sum_{i=1}^nx_{i}y_i}{nS_{xx}} \\ \frac{\sum_{i=1}^nx_{i}y_i-\frac{\sum_{i=1}^nx_i\sum_{i=1}^ny_i}{n}}{S_{xx}} \end{bmatrix}_{2\times1}=\begin{bmatrix} \frac{\bar{y}\sum_{i=1}^nx_i^2-\bar{y}\frac{(\sum_{i=1}^nx_i)^2}n+\bar{y}\frac{(\sum_{i=1}^nx_i)^2}n-\bar{x}\sum_{i=1}^nx_{i}y_i}{S_{xx}} \\ \frac{S_{xy}}{S_{xx}} \end{bmatrix}_{2\times1}$$
-
-$$=\begin{bmatrix} \bar{y}\frac{S_{xx}}{S_{xx}}+\frac{\bar{x}\bar{y}\sum_{i=1}^nx_i-\bar{x}\sum_{i=1}^nx_{i}y_i}{S_{xx}} \\ \frac{S_{xy}}{S_{xx}} \end{bmatrix}_{2\times1}=\begin{bmatrix} \bar{y}-\bar{x}\frac{\sum_{i=1}^nx_{i}y_i-\frac{\sum_{i=1}^nx_i\sum_{i=1}^ny_i}n}{S_{xx}} \\ \frac{S_{xy}}{S_{xx}} \end{bmatrix}_{2\times1}=\begin{bmatrix} \bar{y}-\bar{x}\frac{S_{xy}}{S_{xx}} \\ \frac{S_{xy}}{S_{xx}} \end{bmatrix}_{2\times1}=\begin{bmatrix} \bar{y}-\bar{x}{\hat\beta_1} \\ \hat\beta_1 \end{bmatrix}_{2\times1}$$
-
-$$Var(\mathbf{\hatβ})=σ^2(\mathbf{X'X})^{-1}=\sigma^2\begin{bmatrix} \frac{\sum_{i=1}^nx_i^2}{nS_{xx}} & \frac{-\sum_{i=1}^nx_i}{nS_{xx}} \\ \frac{-\sum_{i=1}^nx_i)}{nS_{xx}} & \frac1{S_{xx}} \end{bmatrix}_{2\times2}=\sigma^2\begin{bmatrix} C_{11} &  C_{12} \\  C_{21} &  C_{22} \end{bmatrix}_{2\times2}$$
-
-
-$$Var(\mathbf{\hat\beta_0})=σ^2C_{11}=\frac{\sigma^2\sum_{i=1}^nx_i^2}{nS_{xx}}=\sigma^2\frac{\sum_{i=1}^nx_i^2-n\bar x_i^2+n\bar x_i^2}{nS_{xx}}=\sigma^2(\frac{1}{n}+\frac{n\bar x_i^2}{nS_{xx}})=\sigma^2(\frac{1}{n}+\frac{\bar x_i^2}{S_{xx}})$$
-
-
-$$Var(\mathbf{\hat\beta_1})=σ^2C_{22}=\frac{\sigma^2}{S_{xx}}$$
-
-
-$$Cov(\mathbf{\hat\beta_0,\hat\beta_1})=σ^2C_{12}=\frac{\sigma^2(-\sum_{i=1}^nx_i)}{nS_{xx}}=\frac{-\sigma^2(n\bar x_i)}{nS_{xx}}=\frac{-\sigma^2\bar x_i}{S_{xx}}$$
- -->
- 
 ### Problem 2: 
 
 Exercise 3.27 (Use y=Xβ+ε, y ̂=Xβ ̂ , Cov(Ay)=A Cov(y)A' and H=X(X'X)^(-1) X')
 Show that $Var(\mathbf{\hat y})=\sigma^2\mathbf{H}$
+
+$$\because \mathbf{\hat y=X\hatβ},\ \therefore Var(\mathbf{\hat y})=Var(\mathbf{X\hatβ})$$
+
+$$\because \mathbf{\hatβ}=\mathbf{(X'X)^{-1} X'Y},\ \therefore Var(\mathbf{X\hatβ})=Var(\mathbf{X(X'X)^{-1} X'Y})$$
+
+$$\because \mathbf{y=Xβ+ε},\ \therefore Var(\mathbf{X(X'X)^{-1} X'Y})=\mathbf{X(X'X)^{-1} X'}Var(\mathbf{Xβ+ε})$$
+
+$$\because  Var(\mathbf{\hatβ})=σ^2(\mathbf{X'X})^{-1}, Cov(\mathbf{y})=\sigma^2\mathbf{I},\ \mathbf{e=(I-H)Y}$$
+
+$$ Cov(\mathbf{X\hatβ})=\mathbf{Cov(X(X'X)^{-1} X'YX')}=\mathbf{X(X'X)^{-1} X'Cov(Y)}=\mathbf{H\sigma^2I}=\sigma^2\mathbf{H}$$
 
 ### Problem 3: 
 
@@ -104,26 +79,46 @@ B<- data.frame(
   sqrt(var(B$b3))
   cov(B$b1,B$b3)
   cor(B$b1,B$b3)
-# function(){B<-cor(X)MSE}
-  
 ```
 
-
 If MSE = 0.513 and n = 9, compute the (Keep 4 or more decimal places, DO NOT round in the intermediate steps)
+
 (a) $Var(\hatβ_1)$
+
+$$Var(\mathbf{\hat\beta_1})=MSE\times C_{11}=0.513\times11.423=5.85999$$
 
 (b) $se(\hatβ_3)$
 
+$$se(\mathbf{\hat\beta_3})=\sqrt{MSE\times C_{33}}=\sqrt{0.513\times3.978}=1.428536$$
+
+
 (c) $Cov(\hatβ_1,\hatβ_3)$
+
+$$Cov(\mathbf{\hat\beta_1,\hat\beta_3})=MSE\times C_{13}=0.513\times(-0.790)$$
 
 (d) $Cor(\hatβ_1\hat,β_3)$
 
+```{r}
+sqrt(0.513*11.423)
+sqrt(0.513*3.978)
+0.513*(-0.790)
+
+0.513*(-0.790)/((sqrt(0.513*11.423))*(sqrt(0.513*3.978)))
+```
+
+$$Cor(\mathbf{\hat\beta_1,\hat\beta_3})=\frac{Cov(\mathbf{\hat\beta_1,\hat\beta_3})}{se(\mathbf{\hat\beta_1})se(\mathbf{\hat\beta_3})}=\frac{-0.40527}{2.420743\times1.428536}=-0.1171938$$
+
 (e) Based on what you found in the previous part(s), explain the relationship between $\hatβ_1, \hatβ_3$.
+
+slightly negative relationship
 
 (f) Without computing variance for all the estimators, explain which estimator is the least consistent.
 
+$C_{11}=11.423\ or\ C_{33}=0.011 ?$
+
 (g) Without computing covariances for all the pairs of estiamtors, list the pair(s) of estimators that are negatively correlated. Provide a reason.
 
+$C_{12},\ C_{13},\ C_{23},\ C_{24},\ C_{15}$
 
 ### Problem 4: 
 a. the fitted model
@@ -132,24 +127,39 @@ $$y=-1.808372+0.003598x_2+0.193960x_7+-0.004816x_8$$
 
 b. ANOVA
 
+```{r}
+anova(model_2_7_8)
+```
+
 $$P(x2)=3.100e^{-5},\
 P(x7)=3.698e^{-7},\
 P(x8)=0.0009378$$
 
-Conclusion:
+Conclusion: All significant
 
 c. R-square and adjusted R-square
 
+$$R^2=0.7863,\quad  R_{adjusted}^2=0.7596$$
+
 d. The fitted model in Part
+
+```{r}
+model_2_7_8%>% summary()
+```
 
 e. The partial F test statistic
 
+$$F_0=\frac{(SSE_{reduced}-SSE_{full})/r}{MSE}=\frac{(SSE_{x2}+SSE_{x7}+SSE_{x8}-?)/r}{2.911}=$$
+
 3.2 The correlation
+
+$$Cor(y_i,\hat y_i)=r=\sqrt{R^2}=\sqrt{0.7863}=0.887$$
 
 3.3 The confidence intervals
 
+a. $CI(\beta_7)=(0.011855322  0.376065098)$
 
-Report your code and output from the software at the end.
+b. $CI(\hat y)=(6.436203 7.996645)$
 
 
 ```{r, echo=TRUE, message = FALSE, collapse=TRUE}
@@ -187,7 +197,7 @@ vcov(model_2_7_8)
 
 car::lht(model_2_7_8, "x2 = x7")
 
-if (!require(olsrr)) {install.packages("olsrr"); library(olsrr)}
+library(olsrr)
 ols_best_subset(model_2_7_8)
 
 ```
