--- a/static/assignment564/lab04.Rmd
+++ b/static/assignment564/lab04.Rmd
@@ -21,37 +21,32 @@ Exercise 3.25 (Just report the T matrix, β vector and c vector along with their
 $$y=β_0+β(x_1+x_2+x_3+x_4)+ε$$
 
 $$
-\mathbf{T}=\begin{bmatrix} 0 & 1 & -1 & 0 & 0 \\ 0 & 0 & 1 & -1 & 0 \\ 0 & 0 & 0 & 1 & -1  \\ 0 & 0 & 0 & 0 & 1 \end{bmatrix}_{3\times5} 
+\mathbf{T}=\begin{bmatrix} 0 & 1 & -1 & 0 & 0 \\ 0 & 0 & 1 & -1 & 0 \\ 0 & 0 & 0 & 1 & -1  \\ 0 & 0 & 0 & 0 & 1 \end{bmatrix}_{4\times5} 
 \mathbf{β}=\begin{bmatrix} \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3 \\ \beta_4 \end{bmatrix}_{5\times1}
-\mathbf{C}=\begin{bmatrix} 0 \\ 0 \\ 0  \\ \beta \end{bmatrix}_{5\times1} rank(T)=4
+\mathbf{C}=\begin{bmatrix} 0 \\ 0 \\ 0  \\ \beta \end{bmatrix}_{4\times1} rank(T)=4
 $$
 
  (b) $H_0:\ β_1=β_2,\ β_3=β_4$
  
 $$y=β_0+β_1(x_1+x_2)+β_3(x_3+x_4)+ε$$
  
- $$
-\mathbf{T}=\begin{bmatrix} 0 & 1 & -1 & 0 & 0 \\ 0 & 0 & 1 & -1 & 0 \end{bmatrix}_{2\times5} 
+ $$\mathbf{T}=\begin{bmatrix} 0 & 1 & -1 & 0 & 0 \\ 0 & 0 & 1 & -1 & 0 \end{bmatrix}_{2\times5} 
 \mathbf{β}=\begin{bmatrix} \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3 \\ \beta_4 \end{bmatrix}_{5\times1}
-\mathbf{C}=\begin{bmatrix} 0 \\ 0 \end{bmatrix}_{2\times1} rank(T)=2
-$$
+\mathbf{C}=\begin{bmatrix} 0 \\ 0 \end{bmatrix}_{2\times1} rank(T)=2$$
  
  (c) $H_0:\ β_1-2β_2=4β_3,\ β_1+2β_2=0$
+ 
+$$β_1=-2β_2=2β_3 \\
+y=β_0+β_1(x_1-\frac12x_2+\frac12x_3)+β_4 x_4+ε$$
 
-$$β_1=-2β_2=2β_3$$
 
-$$y=β_0+β_1(x_1-\frac12x_2+\frac12x_3)+β_4 x_4+ε$$
-
- $$
-\mathbf{T}=\begin{bmatrix} 0 & 1 & -2 & 0 & -4 \\ 0 & 1 & 2 & 0 & 0 \end{bmatrix}_{2\times5} 
+$$\mathbf{T}=\begin{bmatrix} 0 & 1 & -2 & 0 & -4 \\ 0 & 1 & 2 & 0 & 0 \end{bmatrix}_{2\times5} 
 \mathbf{β}=\begin{bmatrix} \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3 \\ \beta_4 \end{bmatrix}_{5\times1}
-\mathbf{C}=\begin{bmatrix} 0 \\ 0 \end{bmatrix}_{2\times1} rank(T)=2
-$$
+\mathbf{C}=\begin{bmatrix} 0 \\ 0 \end{bmatrix}_{2\times1} rank(T)=2$$
 
 ### Problem 2: 
 
-Exercise 3.27 (Use y=Xβ+ε, y ̂=Xβ ̂ , Cov(Ay)=A Cov(y)A' and H=X(X'X)^(-1) X')
-Show that $Var(\mathbf{\hat y})=\sigma^2\mathbf{H}$
+Exercise 3.27 Show that $Var(\mathbf{\hat y})=\sigma^2\mathbf{H}$
 
 $$\because \mathbf{\hat y=X\hatβ},\  \mathbf{\hatβ}=\mathbf{(X'X)^{-1} X'Y}$$
 
@@ -75,11 +70,9 @@ $$se(\mathbf{\hat\beta_3})=\sqrt{MSE\times C_{33}}=\sqrt{0.513\times3.978}=1.428
 
 (c) $Cov(\hatβ_1,\hatβ_3)$
 
-$$Cov(\mathbf{\hat\beta_1,\hat\beta_3})=MSE\times C_{13}=0.513\times(-0.790)$$
+$$Cov(\mathbf{\hat\beta_1,\hat\beta_3})=MSE\times C_{13}=0.513\times(-0.790)=-0.40527$$
 
 (d) $Cor(\hatβ_1\hat,β_3)$
-
-
 
 $$Cor(\mathbf{\hat\beta_1,\hat\beta_3})=\frac{Cov(\mathbf{\hat\beta_1,\hat\beta_3})}{se(\mathbf{\hat\beta_1})se(\mathbf{\hat\beta_3})}=\frac{-0.40527}{2.420743\times1.428536}=-0.1171938$$
 
@@ -106,24 +99,24 @@ b. ANOVA
 Analysis of Variance Table;
 Response: y
 
-   |Df| Sum Sq| Mean Sq |Fvalue|   Pr(>F)    
+---|Df| Sum Sq| Mean Sq |Fvalue| Pr(>F)    
 ---|--|-------| --------| ---- | ---
 x2 |1 | 76.193|  76.193 |26.172|3.100e-05 ***
 x7 |1 |139.501| 139.501 |47.918|3.698e-07 ***
 x8 |1 | 41.400|  41.400 |14.221|0.0009378 ***
 Residuals |24 | 69.870  |2.911  
 
-According to the ANOVA table, the P-values is much smaller than 0.05. The regression is significant.
+According to the ANOVA table, the P-values is much smaller than 0.05. The regression is significant on 95% confident level.
 
 c. The t test.
 
-   | Estimate |Std. Error|t value|Pr($>|t|$)    
----|----------| --------| ---- |
-x2 |0.003598  |0.000695 |5.177 |2.66e-05
-x7 |0.193960  |0.088233 |2.198 |0.037815
-x8 |-0.004816 |0.001277 |-3.771|0.000938
+---| Estimate |Std Error|t value|Pr($>|t|$)    
+---|----------| --------| ----- |---
+x2 |0.003598  |0.000695 | 5.177 |2.66e-05
+x7 |0.193960  |0.088233 | 2.198 |0.037815
+x8 |-0.004816 |0.001277 | -3.771|0.000938
 
-Each variable has a significantly effect on the response variable for 95% confident level. x2 has slight positive affect. x7 has strong positive affect but not as significant as other variables. x8 has slight negative affect.
+Each variable has a significantly effect for the response variable on 95% confident level. x2 has slight positive affect. x7 has strong positive affect but not as significant as other variables. x8 has slight negative affect.
 
 d. R-square and adjusted R-square
 
@@ -182,7 +175,7 @@ model_2_7_8 <- lm(y ~ x2+x7+x8, data=table_b1)
 # build the reduced model on x7
 model_2_8 <- lm(y ~ x2+x8, data=table_b1)
 
-
+# Problem 4
 # 3.1a/c/d t statistics for each hypotheses.
 model_2_7_8%>% summary()
 
